--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todoa10",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -27,6 +27,7 @@
     "@react-email/tailwind": "0.0.8",
     "@react-email/text": "0.0.5",
     "@supabase/supabase-js": "^2.33.1",
+    "@szhsin/react-menu": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
